# untiltledGameJamJamGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  TODO  game  gmon.out  proc  prof  profile  vcpkg.json
cmake/: emscripten-overwrite.cmake  mingw64-toolchain.cmake
libraries/: CMakeLists.txt
src/: Makefile  button.c  button.h  camera.c  camera.h  circle.c  circle.h  depositing.c  depositing.h  enemy.c  enemy.h  game  healthbar.c  healthbar.h  include.h  main.c  missile.c  missile.h  orb.c  orb.h  player.c  player.h  powerup.c  powerup.h  stars.c  stars.h
tmp/: Ideas  Theme
